<resources>
    <string name="app_name">MatchApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_match">Match</string>

    <string name="title_section1">Candidates</string>
    <string name="title_section2">Matches</string>

    <string name="unknown_error">Please try again.</string>
    <string name="cant_fetch_location">Can´t fetch location, enable it and try again.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>

    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_female">Female</string>
    <string name="prompt_male">Male</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_sex">Gender</string>
    <string name="action_register">Register</string>
    <string name="action_ask_register">Don’t have an account?</string>
    <string name="get_started">Get started</string>
    <string name="action_sign_in_short">Sign up</string>

    <string name="error_invalid_email">Invalid user</string>
    <string name="error_field_required">Required field</string>
    <string name="error_no_internet">Verify your connection and try again</string>
    <string name="ok">OK</string>
    <string name="choose">Choose</string>
    <string name="interests_dialog_title">Pick your interests</string>
    <string name="interests">Interests</string>
    <string name="interests_fetch_failed">Interests fetch fail, please try again.</string>
    <string name="change_photo">Change</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="liked">Liked!</string>
    <string name="disliked">Disliked!</string>
    <string name="searching_new_candidate">Fetching for a new candidate…</string>
    <string name="no_more_candidates">There´s no more candidates.</string>
    <string name="profile">Profile</string>

    <string name="username_">Username:</string>
    <string name="name_">Name:</string>
    <string name="age_">Age:</string>
    <string name="gender_">Gender:</string>
    <string name="info">Profile</string>
    <string name="email_">Email:</string>
    <string name="my_matches">My matches</string>
    <string name="chat">Chat</string>
    <string name="write_a_message">Write a message</string>
    <string name="try_to_send_a_message_without_text">You have to write some text before send a message</string>
    <string name="that_was_a_match">That was a match!</string>
    <string name="my_profile">My Profile</string>
    <string name="select_a_radius">Search distance (Km.)</string>
    <string name="refresh_to_get_more_candidates">Click refresh to fetch a new candidate.</string>
</resources>
