<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.taller2.matchapp.RegisterActivity">

	<android.support.v7.widget.Toolbar
		android:id="@+id/my_toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:elevation="@dimen/elevation"
		android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	              xmlns:tools="http://schemas.android.com/tools"
	              android:layout_width="match_parent"
	              android:layout_height="match_parent"
	              android:gravity="center_horizontal"
	              android:paddingBottom="@dimen/activity_vertical_margin"
	              android:paddingLeft="@dimen/activity_horizontal_margin"
	              android:paddingRight="@dimen/activity_horizontal_margin"
	              android:paddingTop="@dimen/activity_vertical_margin">

		<!-- Register progress -->
		<ProgressBar
			android:id="@+id/register_progress"
			style="?android:attr/progressBarStyleLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:visibility="gone"/>

		<ScrollView
			android:id="@+id/register_form"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:id="@+id/user_register_form"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<android.support.design.widget.TextInputLayout
					android:id="@+id/input_layout_username"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/username"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/prompt_username"
						android:maxLines="1"
						android:singleLine="true"/>
				</android.support.design.widget.TextInputLayout>

				<TextView
					android:id="@+id/textView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prompt_sex"
					android:layout_marginTop="10dp"/>

				<RadioGroup
					android:id="@+id/group_sex"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_below="@+id/btnCustom">

					<RadioButton
						android:id="@+id/sex_female"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/prompt_female"
						android:checked="true"/>

					<RadioButton
						android:id="@+id/sex_male"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/prompt_male"/>
				</RadioGroup>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/input_layout_alias"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/alias"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/prompt_alias"
						android:maxLines="1"
						android:singleLine="true"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/input_layout_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/email"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/prompt_email"
						android:inputType="textEmailAddress"
						android:maxLines="1"
						android:singleLine="true"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/input_layout_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/prompt_password"
						android:imeActionId="@+id/login"
						android:imeActionLabel="@string/action_sign_in_short"
						android:imeOptions="actionUnspecified"
						android:inputType="textPassword"
						android:maxLines="1"
						android:singleLine="true"/>
				</android.support.design.widget.TextInputLayout>

				<Button
					android:id="@+id/user_register_button"
					style="?android:textAppearanceSmall"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:text="@string/action_register"
					android:textStyle="bold"/>

			</LinearLayout>
		</ScrollView>

	</LinearLayout>
</LinearLayout>

