<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_main_content"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent">


    <LinearLayout
            android:id="@+id/drawerHeader"
            android:padding="20dp"
            android:layout_alignParentTop="true"
            android:background="@color/card_bg"
            android:layout_width="match_parent"
            android:layout_height="100dp">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/match_logo"
                android:layout_gravity="center"/>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/drawerFooter"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:background="@color/card_bg"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/settings"
                android:text="@string/settings"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        <TextView
                android:id="@+id/logout"
                android:text="@string/logout"
                android:gravity="center_vertical"

                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
    </LinearLayout>


    <LinearLayout
            android:padding="16dp"
            android:layout_above="@id/drawerFooter"
            android:layout_below="@id/drawerHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_matches"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    </LinearLayout>
</RelativeLayout>
