<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:id="@+id/main_content"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

            <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:layout_margin="@dimen/card_margin">

            <LinearLayout
                    style="@style/cardContent"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:textColor="@color/black"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                <LinearLayout
                        android:padding="8dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:id="@+id/nameLayout"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:text="@string/name_"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:layout_marginRight="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/nameTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/emailLayout"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:text="@string/email_"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:layout_marginRight="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/emailTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/ageLayout"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:text="@string/age_"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:layout_marginRight="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:id="@+id/ageTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/genderLayout"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textSize="16sp"
                                android:layout_marginRight="8dp"
                                android:text="@string/gender_"
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:id="@+id/genderTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/interestsLayout"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:id="@+id/interestsLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/interests"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:layout_marginRight="8dp"
                                android:layout_marginBottom="8dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                        <TextView
                                android:id="@+id/interestTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>